New updates in the fragment_leaderboards

--- a/app/src/main/res/layout/fragment_leaderboards.xml
+++ b/app/src/main/res/layout/fragment_leaderboards.xml
@@ -6,48 +6,375 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".LeaderboardsFragment">
 
-    <!-- Leaderboard title -->
-    <TextView
-        android:id="@+id/leaderboards_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="20dp"
-        android:fontFamily="@font/league_spartan_medium"
-        android:text="@string/destaques_do_m_s"
-        android:textColor="#CB3086"
-        android:textSize="28sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toStartOf="leaderboards_card"/>
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/leaderboards_card"
-        android:layout_width="380dp"
-        android:layout_height="111dp"
-        android:layout_margin="12dp"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/white"
-        app:cardCornerRadius="80dp"
-        app:cardElevation="6dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
-        app:layout_constraintWidth_percent="0.45">
+            <!-- Top categories title -->
+            <TextView
+                android:id="@+id/top_categories_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/league_spartan_medium"
+                android:text="Destaques por categoria"
+                android:textColor="#CB3086"
+                android:textSize="27sp" />
 
-        <ImageView
-            android:id="@+id/leaderboards_image_initiative"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:contentDescription="@string/profile_photo_content_desc"
-            android:scaleType="centerCrop"
-            android:src="@drawable/profile_default_image"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.cardview.widget.CardView>
+            <!-- Initiative card-->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/leaderboards_card_initiative"
+                android:layout_width="355dp"
+                android:layout_height="115dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="12dp"
+                android:background="@android:color/white"
+                app:cardCornerRadius="80dp"
+                app:cardElevation="6dp">
+
+                <ImageView
+                    android:id="@+id/leaderboards_initiative_image"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:contentDescription="@string/profile_photo_content_desc"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/profile_default_image" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginStart="125dp">
+
+                    <!-- Username Iniciative -->
+                    <TextView
+                        android:id="@+id/leaderboards_iniciative_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/name____"
+                        android:fontFamily="@font/league_spartan_medium"
+                        android:textColor="#25183E"
+                        android:textSize="25sp"/>
+
+                    <!-- Iniciative -->
+                    <TextView
+                        android:id="@+id/leaderboards_iniciative_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/iniciativa__"
+                        android:fontFamily="@font/league_spartan_medium"
+                        android:textColor="#007CBA"
+                        android:textSize="28sp" />
+
+                    <RatingBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:scaleX="0.6"
+                        android:scaleY="0.6"
+                        android:layout_marginStart="-50dp"/>
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/collaboration_icon"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="300dp"
+                    android:layout_gravity="center_vertical"
+                    android:contentDescription="@string/initiative_icon"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/icon_initiative"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <!-- Collaboration card-->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/leaderboards_card_collaboration"
+                android:layout_width="355dp"
+                android:layout_height="115dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="12dp"
+                android:background="@android:color/white"
+                app:cardCornerRadius="80dp"
+                app:cardElevation="6dp">
+
+                <ImageView
+                    android:id="@+id/leaderboards_collaboration_image"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:contentDescription="@string/profile_photo_content_desc"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/profile_default_image" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginStart="125dp">
+
+                    <!-- Username Iniciative -->
+                    <TextView
+                        android:id="@+id/leaderboards_collaboration_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/name____"
+                        android:fontFamily="@font/league_spartan_medium"
+                        android:textColor="#25183E"
+                        android:textSize="25sp"/>
+
+                    <!-- Iniciative -->
+                    <TextView
+                        android:id="@+id/leaderboards_collaboration_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Colaboração"
+                        android:fontFamily="@font/league_spartan_medium"
+                        android:textColor="#007CBA"
+                        android:textSize="28sp"/>
+
+                    <RatingBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:scaleX="0.6"
+                        android:scaleY="0.6"
+                        android:layout_marginStart="-50dp"/>
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/initiative_icon"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="300dp"
+                    android:layout_gravity="center_vertical"
+                    android:contentDescription="@string/collaboration_icon"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/icon_collaboration"/>
+            </androidx.cardview.widget.CardView>
+
+            <!-- Commitment card-->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/leaderboards_card_commitment"
+                android:layout_width="355dp"
+                android:layout_height="115dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="12dp"
+                android:background="@android:color/white"
+                app:cardCornerRadius="80dp"
+                app:cardElevation="6dp">
+
+                <ImageView
+                    android:id="@+id/leaderboards_commitment_image"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:contentDescription="@string/profile_photo_content_desc"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/profile_default_image" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginStart="125dp">
+
+                    <!-- Username Iniciative -->
+                    <TextView
+                        android:id="@+id/leaderboards_commitment_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/name____"
+                        android:fontFamily="@font/league_spartan_medium"
+                        android:textColor="#25183E"
+                        android:textSize="25sp"/>
+
+                    <!-- Iniciative -->
+                    <TextView
+                        android:id="@+id/leaderboards_commitment_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Compromisso"
+                        android:fontFamily="@font/league_spartan_medium"
+                        android:textColor="#007CBA"
+                        android:textSize="28sp"/>
+
+                    <RatingBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:scaleX="0.6"
+                        android:scaleY="0.6"
+                        android:layout_marginStart="-50dp"/>
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/commitment_icon"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="300dp"
+                    android:layout_gravity="center_vertical"
+                    android:contentDescription="@string/collaboration_icon"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/icon_commitment"/>
+            </androidx.cardview.widget.CardView>
+
+            <!-- Communication card-->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/leaderboards_card_communication"
+                android:layout_width="355dp"
+                android:layout_height="115dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="12dp"
+                android:background="@android:color/white"
+                app:cardCornerRadius="80dp"
+                app:cardElevation="6dp">
+
+                <ImageView
+                    android:id="@+id/leaderboards_communication_image"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:contentDescription="@string/profile_photo_content_desc"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/profile_default_image" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginStart="125dp">
+
+                    <!-- Username Communication -->
+                    <TextView
+                        android:id="@+id/leaderboards_communication_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/name____"
+                        android:fontFamily="@font/league_spartan_medium"
+                        android:textColor="#25183E"
+                        android:textSize="25sp"/>
+
+                    <!-- Communication -->
+                    <TextView
+                        android:id="@+id/leaderboards_communication_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Comunicação"
+                        android:fontFamily="@font/league_spartan_medium"
+                        android:textColor="#007CBA"
+                        android:textSize="28sp"/>
+
+                    <RatingBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:scaleX="0.6"
+                        android:scaleY="0.6"
+                        android:layout_marginStart="-50dp"/>
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/communication_icon"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="300dp"
+                    android:layout_gravity="center_vertical"
+                    android:contentDescription="@string/communication_icon"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/icon_communication"/>
+            </androidx.cardview.widget.CardView>
+
+            <!-- Best employee Title -->
+            <TextView
+                android:id="@+id/best_category_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/league_spartan_medium"
+                android:text="@string/destaque_em_todas_as_categorias"
+                android:textColor="#CB3086"
+                android:textSize="27sp"/>
+
+            <!-- Best employee card -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/leaderboards_card_all_categories"
+                android:layout_width="375dp"
+                android:layout_height="115dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="12dp"
+                android:background="@android:color/white"
+                app:cardCornerRadius="80dp"
+                app:cardElevation="6dp">
+
+                <ImageView
+                    android:id="@+id/all_categories_image"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:contentDescription="@string/profile_photo_content_desc"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/profile_default_image" />
+
+                <TextView
+                    android:id="@+id/all_categories_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="125dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/name_____"
+                    android:fontFamily="@font/league_spartan_medium"
+                    android:textColor="#25183E"
+                    android:textSize="32sp" />
+                <ImageView
+                    android:id="@+id/five_star_icon"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="260dp"
+                    android:contentDescription="@string/five_star_icon"
+                    android:src="@drawable/icon_stars"/>
+            </androidx.cardview.widget.CardView>
+
+            <!-- Best employee list title -->
+            <TextView
+                android:id="@+id/best_employees_list_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/league_spartan_medium"
+                android:text="Maiores destaques mensais"
+                android:textColor="#CB3086"
+                android:textSize="27sp"/>
+
+            <!-- Best employee list RecyclerView -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/best_employees_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:clipToPadding="false"
+                android:paddingBottom="10dp"/>
+
+        </LinearLayout>
+</ScrollView>
 </FrameLayout>
+
