--- a/app/src/main/res/layout/employee_card_item.xml
+++ b/app/src/main/res/layout/employee_card_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="335dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="10dp"
@@ -8,29 +8,54 @@
     app:cardCornerRadius="80dp"
     app:cardElevation="6dp">
 
-    <!-- Container for icon and name -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="16dp">
+        android:layout_gravity="center_vertical"
+        android:padding="5dp">
 
         <!-- Name Text -->
         <TextView
             android:id="@+id/employee_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Employee Name"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:fontFamily="@font/league_spartan_medium" />
+            android:layout_marginStart="15dp"
+            android:text="Vitor Santos"
+            android:textColor="#25183E"
+            android:textSize="22sp"
+            android:fontFamily="@font/league_spartan_medium"/>
 
-        <!-- Icon Image on the left -->
+        <!-- Job Text -->
+        <TextView
+            android:id="@+id/job"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:text="Formador"
+            android:textColor="#007CBA"
+            android:textSize="22sp"
+            android:fontFamily="@font/league_spartan_medium"/>
+
+        <!-- Highlight Count Text -->
+        <TextView
+            android:id="@+id/highlight_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:text="6"
+            android:textColor="#000000"
+            android:textSize="22sp"
+            android:fontFamily="@font/league_spartan_medium"
+            android:layout_marginEnd="8dp"/>
+
+        <!-- Icon Image on the right -->
         <ImageView
             android:id="@+id/icon_image"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="12dp"
-            android:src="@drawable/ic_employee" />
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:src="@drawable/icon_coffee"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
