--- a/app/src/main/res/layout/historic_received_feedback_card.xml
+++ b/app/src/main/res/layout/historic_received_feedback_card.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_historic_given"
+        android:id="@+id/card_historic_received"
         android:layout_width="330dp"
         android:layout_height="110dp"
         android:layout_margin="12dp"
@@ -19,7 +19,7 @@
         app:layout_constraintWidth_percent="0.45">
 
         <ImageView
-            android:id="@+id/profile_image_given"
+            android:id="@+id/profile_image_received"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginStart="10dp"
@@ -39,7 +39,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/feed_name_given"
+                android:id="@+id/feed_name_received"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/league_spartan_medium"
@@ -59,13 +59,13 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/historic_given_feedback_icon"
+            android:id="@+id/received_feedback_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="260dp"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/initiative_icon"
             android:scaleType="centerCrop"
-            android:src="@drawable/icon_historic_given_feedback"/>
+            android:src="@drawable/icon_historic_received_feedback"/>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
