--- a/app/src/main/res/layout/historic_received_feedback_card.xml
+++ b/app/src/main/res/layout/historic_received_feedback_card.xml
@@ -39,7 +39,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/feed_name_received"
+                android:id="@+id/received_name_received"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/league_spartan_medium"
@@ -49,7 +49,7 @@
                 android:textSize="22sp"/>
 
             <TextView
-                android:id="@+id/feed_day_time"
+                android:id="@+id/received_day_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/league_spartan_medium"
