--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -29,8 +29,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="90dp"
-        app:layout_constraintTop_toBottomOf="logoSmall">
+        android:layout_marginStart="90dp">
 
         <!-- Title -->
         <TextView
